# ceres_solver_samples

./: CMakeLists.txt  README.md  package.xml
src/: ceres_original_example.cpp  curve_fitting1.cpp  curve_fitting2.cpp  curve_fitting3.cpp  intro1.cpp  intro2.cpp  matplotlib_sample.cpp
